[package]
name = "jsonset"
version = "0.1.0"
description = "Set JSON values in JSON file by JSONPath."
authors = ["longrunsoul <longrunsoul@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plainjson = "0.1.1"
clap = "2.33.3"
anyhow = "1.0.41"